--- a/js/finger.html
+++ b/js/finger.html
@@ -83,19 +83,99 @@
   // }
 
   // 코알누 for문 while문 문제4.
-  let n = 11;
-  let isPrime = true;
-
-  if(n === 1) {
-    isPrime = false;
-  }
-  for(let i=2; i<n; i++) {
-    if(n % i == 0) {
-      isPrime = false;
-    }
-  }
-  console.log(isPrime);
+  // let n = 11;
+  // let isPrime = true;
+  //
+  // if(n === 1) {
+  //   isPrime = false;
+  // }
+  // for(let i=2; i<n; i++) {
+  //   if(n % i == 0) {
+  //     isPrime = false;
+  //   }
+  // }
+  // console.log(isPrime);
 // ㅇㅏ아 아메리카노
+  // 함수문제1
+  // function greet() {
+  //   console.log("안녕 내 이름은 제시카야")
+  // }
+  // greet()
+
+  // 함수문제2 `"${}"`
+  // function greet(name) {
+  //
+  //   console.log(`"안녕 내 이름은 ${name}야"`)
+  // }
+  // greet("할리");
+
+  // 함수문제3
+  // function greet(name) {
+  //
+  //   console.log(`"안녕 내 이름은 ${name}야"`)
+  //
+  //   return name;
+  // }
+
+  //함수문제4
+
+  // function meetAt(year, month, day) {
+  //
+  //   if(day) {
+  //     return `"${year}/${month}/${day}"`
+  //
+  //   }
+  //   if (month) {
+  //     return`"${year}년 ${month}월"`
+  //
+  //   }
+  //   if (year) {
+  //     return `"${year}년"`
+  //
+  //   }
+  //
+  //
+  // }
+  // console.log(meetAt(2020,10,22));
+
+  // //함수문제 5
+  // function findSmallestElement(arr) {
+  //   // let result = arr[0];
+  //   let result = Math.min(...arr)
+  //
+  //   if (arr.length === 0 ) {
+  //     return 0;
+  //   }
+  //   // for (let i = 1;i < arr.length; i++){
+  //   //   if(result > arr[i]){
+  //   //     result = arr[i];
+  //   //   }
+  //   // }
+  //   return result;
+  //
+  // }
+  //
+  // console.log(findSmallestElement([1,3,5,784,4,6,8]))
+  // // console.log(smallestNumber)
+
+  // //함수문제6
+  // let unit = [50000,10000,5000,1000,500,100]
+  // function changeCalculate(money) {
+  //   for(let i=0;i<unit.length;i++){
+  //
+  //     let num = Math.floor(money / unit[i])
+  //     //소수점버림 Math.floor
+  //     console.log(unit[i]+"X"+num)
+  //     money -=  unit[i]*num
+  //     //-몫: money에 재할당
+  //
+  //   }
+  // }
+  //
+  // changeCalculate(12300)
+
+
+
 </script>
 </body>
 </html>
